--- a/lang/fa.json
+++ b/lang/fa.json
@@ -578,17 +578,17 @@
     "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": ":attribute باید حداقل :length  کارکتر و شامل حداقل یک حرف بزرگ و عدد و یک کارکتر خاص باشد.",
     "The :attribute must be at least :length characters and contain at least one uppercase character.": ":attribute باید حداقل :length  کارکتر و شامل حداقل یک حرف بزرگ باشد.",
     "The :attribute must be at least :length characters.": ":attribute باید حداقل :length  کارکتر باشد.",
-    "The :attribute must contain at least one letter.": "The :attribute must contain at least one letter.",
-    "The :attribute must contain at least one number.": "The :attribute must contain at least one number.",
-    "The :attribute must contain at least one symbol.": "The :attribute must contain at least one symbol.",
-    "The :attribute must contain at least one uppercase and one lowercase letter.": "The :attribute must contain at least one uppercase and one lowercase letter.",
+    "The :attribute must contain at least one letter.": ":attribute باید حداقل یک حرف داشته باشد.",
+    "The :attribute must contain at least one number.": ":attribute باید حداقل یک عدد داشته باشد.",
+    "The :attribute must contain at least one symbol.": ":attribute باید حداقل یک نماد داشته باشد.",
+    "The :attribute must contain at least one uppercase and one lowercase letter.": ":attribute باید حداقل شامل یک حرف بزگ و کوچک باشد.",
     "The :resource was created!": "The :resource was created!",
     "The :resource was deleted!": "The :resource was deleted!",
     "The :resource was restored!": "The :resource was restored!",
     "The :resource was updated!": "The :resource was updated!",
     "The action ran successfully!": "The action ran successfully!",
     "The file was deleted!": "فایل حذف شد!",
-    "The given :attribute has appeared in a data leak. Please choose a different :attribute.": "The given :attribute has appeared in a data leak. Please choose a different :attribute.",
+    "The given :attribute has appeared in a data leak. Please choose a different :attribute.": ":attribute قبلا رو رفته است. رمز عبور قوی تری انتخاب کنید.",
     "The government won't let us show you what's behind these doors": "The government won't let us show you what's behind these doors",
     "The HasOne relationship has already been filled.": "The HasOne relationship has already been filled.",
     "The password is incorrect.": "رمز عبور صحیح نیست",
