--- a/lang/fa.json
+++ b/lang/fa.json
@@ -609,7 +609,7 @@
     "There was a problem submitting the form.": "There was a problem submitting the form.",
     "These people have been invited to your team and have been sent an invitation email. They may join the team by accepting the email invitation.": "These people have been invited to your team and have been sent an invitation email. They may join the team by accepting the email invitation.",
     "This account does not have an active subscription.": "This account does not have an active subscription.",
-    "This action is unauthorized.": "این اقدام غیرمجاز است.",
+    "This action is unauthorized.": "این اقدام غیرمجاز است",
     "This device": "این دستگاه",
     "This file field is read-only.": "This file field is read-only.",
     "This image": "این تصویر",
